assets/custom.css
body,
.header__active-menu-item {
    font-family: 'Manrope', sans-serif;
}
a {
    text-decoration: none;
}
button {
    box-shadow: none;
    border: 1px solid black;
}
a,
a.button--primary,
.inner__link-text,
.featured-product__button {
    transition: 0.3s;
}


/* HEADER  */
header.site-header.border-bottom.logo--left {
    background-color: gray;
}
.header--middle-left {
    grid-template-columns: auto auto auto;
}
.header__heading-logo {
    min-width: 143px;
}
.header__active-menu-item,
.header__menu-item {
    text-decoration: none;
    text-transform: uppercase;
}


/* NEW BANNER */
.hero {
    position: relative;
}
.hero__content {
    position: absolute;
    padding: 0 5rem;
    width: 30%;
}
.hero__image-img {
    width: 100%;
}
.hero__btn-container {
    margin: 5rem 0;
}
.hero__button {
    padding: 1rem 3rem;
}


/* BANNER */
.banner__content {
    display: grid;
    grid-template-columns: 33% 67%;
    padding-bottom: 0;
    padding-top: 0;
}
.banner__box {
    text-align: initial;
}
.color-background-1 {
    background-color: unset;
}
.color-background-1,
.banner__heading,
.banner__buttons {
    color: white;
}
.banner__heading {
    font-size: 5rem;
    letter-spacing: 0.2rem;
    line-height: 6rem;
}
.banner__box >
.banner__text {
    margin-bottom: 5rem;
    opacity: .75;
}
.banner__box > 
.banner__buttons {
    justify-content: initial;
}
.banner__image {
    text-align: center;
}
.banner__image-img {
    width: inherit;
    height: auto;
}
.button--primary {
    opacity: 1 !important;
    background-color: #D87D4A;
    padding: 1rem 3rem;
}
.button--primary:hover,
.button--primary:active {
    background-color: #FBAF85;
}
.banner__featured-text {
    font-size: 1.25rem;
    letter-spacing: 1rem;
    line-height: 2rem;
    color: white;
    margin-bottom: 3rem;
    opacity: .5;
}


/* COLLECTIONS */

.grid {
    display: grid;
}
.collection-container {
    grid-template-columns: auto auto auto;
    grid-gap: 2rem;
    text-align: center;
    max-width: var(--page-width);
    margin: 15rem auto;
    padding: 0rem 5rem;
}
.collection-container__inner {
    place-self: center;
    align-self: end;
    position: relative;
    top: 0;
    left: 0;
    width: 100%;
    cursor:pointer;
}
.collection-container__inner:hover .inner__link-text {
    color: #D87D4A;
    opacity: 1;
}
.collection__image {
    position: relative;
    top: -5rem;
    left: 0;
}
.inner {
    background-color: #F1F1F1;
    border-radius: 1rem;
    position: absolute;
    bottom: 0;
    z-index: -10;
    width: 100%;
    border-radius: 1rem;
    padding-top: 10rem;
    padding-bottom: 1rem;
}
.inner__title {
    margin: 0;
}
.inner__title,
.inner__link-container {
    text-align: center;
}
.inner__link-container {
    display: flex;
    align-items: center;
    place-content: center;
}
.inner__title,
.inner__link-text {
    text-transform: uppercase;
}
.inner__link-text {
    font-size: 1.25rem;
    padding-right: 1rem;
    color: #000000;
    opacity: 0.5;
}

/* FEATURED PRODUCTS */

.featured-product {
    margin: 4rem auto;
    max-width: 1600px;
    padding: 0 5rem;
}
.featured-product__container {
    border-radius: 0.5rem;
    margin-bottom: 4rem;
}
.featured-product__header,
.featured-product__button {
    text-transform: uppercase;
}
.featured-product__header {
    font-size: 5.5rem;
    line-height: 1;
    margin: 0;
}
.column-2 {
    display: grid;
    grid-template-columns: 50% 50%;
}
.featured-product__img-container {
    text-align: center;
    overflow: hidden;
}
.featured-product__img {
    vertical-align: bottom;
    transform: translateY(1rem);
    padding-top: 10rem;
}
.featured-product__txt-container {
    align-self: center;
    padding: 0 13rem;
}
.featured-product__desc {
    margin-bottom: 4rem;
}
.featured-product__button {
    padding: 1rem 3rem;
    cursor: pointer;
    line-height: initial;
} 
.featured-product__button:hover {
    background-color: #4C4C4C;
}

.border-radius {
    border-radius: 0.5rem;
}


/* FEATURED PRODUCT MEDIUM */
.featured-product-med__img {
    width: 100%;
}
.featured-product-med__img-container {
    line-height: 0;
}
.pos-relative {
    position: relative;
    overflow: hidden;
}
.pos-absolute {
    position: absolute;
}
.featured-product-med__txt-container {
    padding: 0 8rem;
    width: 100%;
}
.featured-product-med__header {
    padding: 3rem 0;
    font-size: 4rem;
}
.featured-product-med__button:hover {
    color: #FFFFFF;
    background-color: #000000;
}
.grid-view {
    display: grid;
    grid-template-columns: 50% 50%;
    grid-template-rows: auto;
}
.grid-gap {
    grid-gap: 2rem;
}
.grid-area {
    grid-area: 1/1/4/4;
}
.grid-column-2 {
    grid-column-start: 2;
    height: 100%;
}
.flex-column {
    display: flex;
    flex-direction: column;
    place-content: center;
}
.fit-content {
    width: fit-content;
}

/* =============================================================== */
/* TABLETS */
/* =============================================================== */
@media only screen and (max-width: 991px) {
    /* NEW BANNER */
    .hero__content {
        text-align: center;
        width: 70%;
        left: 15%;
    }


    /* BANNER */
    .banner__content {
        display: block;
    }
    .banner__content,
    .banner__heading,
    .banner__featured-text {
        text-align: center;
        text-align-last: center;
    }
    .banner__box>
    .banner__buttons {
        justify-content: center;
    }
    .banner__content {
        display: table;
    }
    .banner__box {
        display: table-cell;
        vertical-align: middle;
        padding: 0 24vw;
    }
    .banner {
        height: 71vh;
    }
    .banner__text {
        text-align: center;
    }


    /* COLLECTIONS */
    .collection-container {
        margin: 12rem auto;
    }
    .collection__image {
        max-width: 160px;
    }
    .inner {
        padding-top: 5rem; 
    }


    /* FEATURED PRODUCTS */
    .column-2 {
        display: block;
        padding: 6rem 0;
    }
    .featured-product__txt-container {
        text-align: center;
    }
    .featured-product__header {
        margin: 0 auto;
        width: 100%;
    }
    .featured-product__img {
        padding-top: 0;
        padding-bottom: 5rem;
    }


    /* FEATURED PRODUCTS MED */
    .featured-product-med__header {
        margin: 0;
        font-size: 3.5rem;
    }
    .featured-product-med__txt-container {
        padding: 0 6rem;
        text-align: initial;
    }
}

/* =============================================================== */
/* MOBILE */
/* =============================================================== */
@media only screen and (max-width: 767px) {
    /* NEW BANNER */
    .hero__content {
        width: 100%;
        left: 0;
        top: 25%;
        padding: 0 1rem;
    }


    /* BANNER */
    .banner__box {
        padding: 0;
    }
    .button--primary {
        color: white;
    }

    .banner__heading {
        letter-spacing: 0px;
    }
    .banner,
    .banner--large {
        height: 65rem;
    }
    .banner__media {
        left: unset;
        top: unset;
    }
    .banner__text {
        letter-spacing: normal;
    }
    .banner__buttons > .button {
        border: none;
        box-shadow: none;
    }

    /* COLLECTIONS */
    .collection-container {
        display: block;
        padding: 0 2rem;
    }
    .collection-container__inner {
        margin-top: 8rem;
    }

    /* FEATURED PRODUCTS */
    .featured-product {
        padding: 0;
        margin: 2rem auto;
    }
    .featured-product__container {
        margin: 0px 2rem;
    }
    .featured-product__txt-container {
        padding: 2rem;
    }
    .featured-product__desc {
        margin-bottom: 3rem;
    }
    .grid-view {
        grid-template-rows: auto auto;
        grid-template-columns: unset;
    }
    .grid-column-2 {
        grid-column-start: unset;
        grid-row-start: 2;
        height: initial;
        position: initial;
    }
    .fit-content {
        margin-bottom: 3rem;
    }
}

